# vp-kuljetus-vehicle-data-receiver-log-reader

./: .gitignore  Cargo.toml  README.md
src/: main.rs
