[package]
name = "vp-kuljetus-vehicle-data-receiver-log-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
nom-teltonika = { version = "0.1.5", features = ["serde"] }
serde_json = "1.0.115"
